--- a/src/App.css
+++ b/src/App.css
@@ -44,3 +44,24 @@
 .read-the-docs {
   color: #888;
 }
+
+@keyframes scroll {
+  0% {
+    transform: translateX(0);
+  }
+  100% {
+    transform: translateX(calc(-260px*4));
+  }
+}
+
+
+.slide-track {
+  display: flex;
+  gap: 20px;
+  width: calc(200px * 8); 
+  animation: scroll 10s  linear infinite;
+}
+
+.slide-track:hover {
+  animation-play-state: paused; /* Pausa la animación al pasar el mouse */
+}
